--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -302,3 +302,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Audio/Classes/SoundClassPrime.SoundClassPrime
+DefaultMediaSoundClassName=/Game/Audio/Classes/SoundClassPrime.SoundClassPrime
+
