change default map, project name, project version

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=RoboHunters
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
