adding hotkey to disable in-game UI

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2B94866A42695CA9678EFCB495C82FA4
 ProjectName=RoboHunters
-ProjectVersion=0.0.1
+ProjectVersion=1.0
+CompanyName=HomeTeam GameDev
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D4AE0DC846EAE6A5CD47C38C4A069E16", "ROBOHUNTERS")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "CCE36E0A4D95F392CA5015AAE3BB92D6", "RoboHunters")
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
