--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,11 +11,111 @@ ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "CCE36E0A4D95F392CA5
 -PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass="/Script/Engine.World",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass="/Script/Engine.PrimaryAssetLabel",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
-+PrimaryAssetTypesToScan=(PrimaryAssetType="Ability Assets",AssetBaseClass="/Game/Data/BP_PDA_Ability.BP_PDA_Ability_C",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Data/DataAssets")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Ability Assets",AssetBaseClass="/Game/Data/BP_PDA_Ability.BP_PDA_Ability_C",bHasBlueprintClasses=True,bIsEditorOnly=False,Directories=((Path="/Game/Data/DataAssets")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Shipping
+BuildTarget=
+LaunchOnTarget=
+StagingDirectory=(Path="C:/Users/tfunk/code/unreal/RoboHunters/Build")
+FullRebuild=False
+ForDistribution=True
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=True
+bUseZenStore=False
+bMakeBinaryConfig=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
+bCompressed=True
+PackageCompressionFormat=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PackageAdditionalCompressionOptions=
+PackageCompressionMethod=Kraken
+PackageCompressionLevel_DebugDevelopment=4
+PackageCompressionLevel_TestShipping=5
+PackageCompressionLevel_Distribution=7
+PackageCompressionMinBytesSaved=1024
+PackageCompressionMinPercentSaved=5
+bPackageCompressionEnableDDC=False
+PackageCompressionMinSizeToConsiderDDC=0
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
++IniSectionDenylist=HordeStorageServers
++IniSectionDenylist=StorageServers
++DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
++DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
++DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
++DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
++DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
++DirectoriesToAlwaysCook=(Path="/Game/Data")
+PerPlatformBuildConfig=()
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
+PerPlatformBuildTarget=()
 
