trying to move player died screen logic into player controller

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,6 +12,7 @@ ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "CCE36E0A4D95F392CA5
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass="/Script/Engine.World",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass="/Script/Engine.PrimaryAssetLabel",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Ability Assets",AssetBaseClass="/Game/Data/BP_PDA_Ability.BP_PDA_Ability_C",bHasBlueprintClasses=True,bIsEditorOnly=False,Directories=((Path="/Game/Data/DataAssets")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Widgets",AssetBaseClass="/Script/UMG.UserWidget",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/UI")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
@@ -21,7 +22,7 @@ MetaDataTagsForAssetRegistry=()
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
 StagingDirectory=(Path="C:/Users/tfunk/code/unreal/RoboHunters/Build")
