add custom mouse cursors (default and crosshair)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -306,3 +306,15 @@ ManualIPAddress=
 DefaultSoundClassName=/Game/Audio/Classes/SoundClassPrime.SoundClassPrime
 DefaultMediaSoundClassName=/Game/Audio/Classes/SoundClassPrime.SoundClassPrime
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=((Default, (CursorPath="/UI/Images/mouse_cursor_1.png")),(Crosshairs, (CursorPath="/UI/Images/crosshair.png",HotSpot=(X=0.500000,Y=0.500000))))
+SoftwareCursors=()
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+DesignScreenSize=(X=1920,Y=1080)
+bLoadWidgetsOnDedicatedServer=True
+
