add more achievement IDs from steam

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,11 @@ bEnabled=true
 SteamDevAppId=2339970
 Achievement_0_Id="TEST_ACHIEVEMENT_1_0"
 Achievement_1_Id="GOT_MAIL"
+Achievement_2_Id="MATCH_KILLS_100"
+Achievement_3_Id="MATCH_KILLS_1000"
+Achievement_4_Id="MATCH_KILLS_1000"
+Achievement_5_Id="DA_BOMB"
+Achievement_6_Id="GET_BACK_UP"
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
