--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ Achievement_3_Id="MATCH_KILLS_1000"
 Achievement_4_Id="MATCH_KILLS_1000"
 Achievement_5_Id="DA_BOMB"
 Achievement_6_Id="GET_BACK_UP"
+Achievement_7_Id="BOSS_KILL"
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
