fix hardware cursors missing from packaged game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -328,7 +328,7 @@ DefaultMediaSoundClassName=/Game/Audio/Classes/SoundClassPrime.SoundClassPrime
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
-HardwareCursors=((Default, (CursorPath="/UI/Images/mouse_cursor_1.png")),(Crosshairs, (CursorPath="/UI/Images/crosshair.png",HotSpot=(X=0.500000,Y=0.500000))))
+HardwareCursors=((Default, (CursorPath="/Slate/mouse_cursor_1")),(Crosshairs, (CursorPath="/Slate/crosshair",HotSpot=(X=0.500000,Y=0.500000))))
 SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
