--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -116,6 +116,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
 +DirectoriesToAlwaysCook=(Path="/Game/Data")
++DirectoriesToAlwaysCook=(Path="/Game/Slate")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
