highlight is more obvious in skill select screen

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -117,6 +117,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
 +DirectoriesToAlwaysCook=(Path="/Game/Data")
 +DirectoriesToAlwaysCook=(Path="/Game/Slate")
++DirectoriesToAlwaysCook=(Path="/Game/Characters/MainCharacter")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
